// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tree events should check parent if all children checked 1`] = `
<div
  className="react-tree-view"
>
  <ul>
    <li
      className="indent-0"
      data-id="0"
    >
      <i
        className="fa fa-angle-right icon expand-button"
        onClick={[Function]}
      />
      <i
        className="fa fa-square-o icon checkbox-button"
        onClick={[Function]}
      />
      <i
        className="icon fa fa-ban"
        style={Object {}}
      />
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "Parent 0",
          }
        }
        onClick={[Function]}
      />
    </li>
    <li
      className="indent-0 selectable changed-checkbox"
      data-id="1"
    >
      <i
        className="fa fa-angle-down icon expand-button"
        onClick={[Function]}
      />
      <i
        className="fa fa-check-square icon checkbox-button"
        onClick={[Function]}
      />
      <i
        className="icon fa fa-ban"
        style={Object {}}
      />
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "Parent 1",
          }
        }
        onClick={[Function]}
      />
    </li>
    <li
      className="indent-1 selectable changed-checkbox"
      data-id="1.0"
    >
      <i
        className="fa fa-angle-down icon expand-button"
        onClick={[Function]}
      />
      <i
        className="fa fa-check-square icon checkbox-button"
        onClick={[Function]}
      />
      <i
        className="icon fa fa-ban"
        style={Object {}}
      />
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "Child 1.0",
          }
        }
        onClick={[Function]}
      />
    </li>
    <li
      className="indent-2 no-open-button selectable changed-checkbox selected"
      data-id="1.0.0"
    >
      <i
        className="fa fa-check-square icon checkbox-button"
        onClick={[Function]}
      />
      <i
        className="fa fa-check"
      />
      <i
        className="icon fa fa-ban"
        style={Object {}}
      />
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "Child 1.0.0",
          }
        }
        onClick={[Function]}
      />
    </li>
    <li
      className="indent-2 no-open-button selectable changed-checkbox"
      data-id="1.0.1"
    >
      <i
        className="fa fa-check-square icon checkbox-button"
        onClick={[Function]}
      />
      <i
        className="icon fa fa-ban"
        style={Object {}}
      />
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "Child 1.0.1",
          }
        }
        onClick={[Function]}
      />
    </li>
    <li
      className="indent-2 no-open-button selectable changed-checkbox"
      data-id="1.0.2"
    >
      <i
        className="fa fa-check-square icon checkbox-button"
        onClick={[Function]}
      />
      <i
        className="icon fa fa-ban"
        style={Object {}}
      />
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "Child 1.0.2",
          }
        }
        onClick={[Function]}
      />
    </li>
    <li
      className="indent-1 no-open-button selectable changed-checkbox"
      data-id="1.1"
    >
      <i
        className="fa fa-check-square icon checkbox-button"
        onClick={[Function]}
      />
      <i
        className="icon fa fa-ban"
        style={Object {}}
      />
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "Child 1.1",
          }
        }
        onClick={[Function]}
      />
    </li>
    <li
      className="indent-0 selectable"
      data-id="2"
    >
      <i
        className="fa fa-angle-right icon expand-button"
        onClick={[Function]}
      />
      <i
        className="fa fa-square-o icon checkbox-button"
        onClick={[Function]}
      />
      <i
        className="icon fa fa-ban"
        style={Object {}}
      />
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "Parent 2",
          }
        }
        onClick={[Function]}
      />
    </li>
  </ul>
  <style>
    
                .react-tree-view .indent-0{padding-left:0em}
                .react-tree-view .indent-0.no-open-button{padding-left:calc(1em + 4px)}
                .react-tree-view .indent-1{padding-left:1em}
                .react-tree-view .indent-1.no-open-button{padding-left:calc(2em + 4px)}
                .react-tree-view .indent-2{padding-left:2em}
                .react-tree-view .indent-2.no-open-button{padding-left:calc(3em + 4px)}
                .react-tree-view .indent-3{padding-left:3em}
                .react-tree-view .indent-3.no-open-button{padding-left:calc(4em + 4px)}
  </style>
</div>
`;

exports[`tree events should match failed lazy load 1`] = `
<div
  className="react-tree-view"
>
  <ul>
    <li
      className="indent-0"
      data-id="0"
    >
      <i
        className="fa fa-angle-right icon expand-button"
        onClick={[Function]}
      />
      <i
        className="icon fa fa-ban"
        style={Object {}}
      />
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "Parent 0",
          }
        }
        onClick={[Function]}
      />
    </li>
    <li
      className="indent-0 selectable"
      data-id="1"
    >
      <i
        className="fa fa-angle-down icon expand-button"
        onClick={[Function]}
      />
      <i
        className="icon fa fa-ban"
        style={Object {}}
      />
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "Parent 1",
          }
        }
        onClick={[Function]}
      />
    </li>
    <li
      className="indent-1 selectable"
      data-id="1.0"
    >
      <i
        className="fa fa-angle-down icon expand-button"
        onClick={[Function]}
      />
      <i
        className="icon fa fa-ban"
        style={Object {}}
      />
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "Child 1.0",
          }
        }
        onClick={[Function]}
      />
    </li>
    <li
      className="indent-2 no-open-button selectable selected"
      data-id="1.0.0"
    >
      <i
        className="fa fa-check"
      />
      <i
        className="icon fa fa-ban"
        style={Object {}}
      />
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "Child 1.0.0",
          }
        }
        onClick={[Function]}
      />
    </li>
    <li
      className="indent-2 no-open-button selectable"
      data-id="1.0.1"
    >
      <i
        className="icon fa fa-ban"
        style={Object {}}
      />
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "Child 1.0.1",
          }
        }
        onClick={[Function]}
      />
    </li>
    <li
      className="indent-2 no-open-button selectable"
      data-id="1.0.2"
    >
      <i
        className="icon fa fa-ban"
        style={Object {}}
      />
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "Child 1.0.2",
          }
        }
        onClick={[Function]}
      />
    </li>
    <li
      className="indent-1 no-open-button selectable"
      data-id="1.1"
    >
      <i
        className="icon fa fa-ban"
        style={Object {}}
      />
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "Child 1.1",
          }
        }
        onClick={[Function]}
      />
    </li>
    <li
      className="indent-0 selectable"
      data-id="2"
    >
      <i
        className="fa fa-fw fa-exclamation icon expand-button"
        onClick={[Function]}
      />
      <i
        className="icon fa fa-ban"
        style={Object {}}
      />
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "Parent 2",
          }
        }
        onClick={[Function]}
      />
    </li>
  </ul>
  <style>
    
                .react-tree-view .indent-0{padding-left:0em}
                .react-tree-view .indent-0.no-open-button{padding-left:calc(1em + 4px)}
                .react-tree-view .indent-1{padding-left:1em}
                .react-tree-view .indent-1.no-open-button{padding-left:calc(2em + 4px)}
                .react-tree-view .indent-2{padding-left:2em}
                .react-tree-view .indent-2.no-open-button{padding-left:calc(3em + 4px)}
                .react-tree-view .indent-3{padding-left:3em}
                .react-tree-view .indent-3.no-open-button{padding-left:calc(4em + 4px)}
  </style>
</div>
`;

exports[`tree events should match lazy loaded nodes 1`] = `
<div
  className="react-tree-view"
>
  <ul>
    <li
      className="indent-0"
      data-id="0"
    >
      <i
        className="fa fa-angle-right icon expand-button"
        onClick={[Function]}
      />
      <i
        className="icon fa fa-ban"
        style={Object {}}
      />
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "Parent 0",
          }
        }
        onClick={[Function]}
      />
    </li>
    <li
      className="indent-0 selectable"
      data-id="1"
    >
      <i
        className="fa fa-angle-down icon expand-button"
        onClick={[Function]}
      />
      <i
        className="icon fa fa-ban"
        style={Object {}}
      />
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "Parent 1",
          }
        }
        onClick={[Function]}
      />
    </li>
    <li
      className="indent-1 selectable"
      data-id="1.0"
    >
      <i
        className="fa fa-angle-down icon expand-button"
        onClick={[Function]}
      />
      <i
        className="icon fa fa-ban"
        style={Object {}}
      />
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "Child 1.0",
          }
        }
        onClick={[Function]}
      />
    </li>
    <li
      className="indent-2 no-open-button selectable selected"
      data-id="1.0.0"
    >
      <i
        className="fa fa-check"
      />
      <i
        className="icon fa fa-ban"
        style={Object {}}
      />
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "Child 1.0.0",
          }
        }
        onClick={[Function]}
      />
    </li>
    <li
      className="indent-2 no-open-button selectable"
      data-id="1.0.1"
    >
      <i
        className="icon fa fa-ban"
        style={Object {}}
      />
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "Child 1.0.1",
          }
        }
        onClick={[Function]}
      />
    </li>
    <li
      className="indent-2 no-open-button selectable"
      data-id="1.0.2"
    >
      <i
        className="icon fa fa-ban"
        style={Object {}}
      />
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "Child 1.0.2",
          }
        }
        onClick={[Function]}
      />
    </li>
    <li
      className="indent-1 no-open-button selectable"
      data-id="1.1"
    >
      <i
        className="icon fa fa-ban"
        style={Object {}}
      />
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "Child 1.1",
          }
        }
        onClick={[Function]}
      />
    </li>
    <li
      className="indent-0 selectable"
      data-id="2"
    >
      <i
        className="fa fa-angle-down icon expand-button"
        onClick={[Function]}
      />
      <i
        className="icon fa fa-ban"
        style={Object {}}
      />
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "Parent 2",
          }
        }
        onClick={[Function]}
      />
    </li>
    <li
      className="indent-1 no-open-button selectable"
      data-id="2.0"
    >
      <i
        className="icon fa fa-ban"
        style={Object {}}
      />
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "Sub Parent 0",
          }
        }
        onClick={[Function]}
      />
    </li>
    <li
      className="indent-1 no-open-button selectable"
      data-id="2.1"
    >
      <i
        className="icon fa fa-ban"
        style={Object {}}
      />
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "Sub Parent 1",
          }
        }
        onClick={[Function]}
      />
    </li>
    <li
      className="indent-1 no-open-button selectable"
      data-id="2.2"
    >
      <i
        className="icon fa fa-ban"
        style={Object {}}
      />
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "Sub Parent 2",
          }
        }
        onClick={[Function]}
      />
    </li>
  </ul>
  <style>
    
                .react-tree-view .indent-0{padding-left:0em}
                .react-tree-view .indent-0.no-open-button{padding-left:calc(1em + 4px)}
                .react-tree-view .indent-1{padding-left:1em}
                .react-tree-view .indent-1.no-open-button{padding-left:calc(2em + 4px)}
                .react-tree-view .indent-2{padding-left:2em}
                .react-tree-view .indent-2.no-open-button{padding-left:calc(3em + 4px)}
                .react-tree-view .indent-3{padding-left:3em}
                .react-tree-view .indent-3.no-open-button{padding-left:calc(4em + 4px)}
  </style>
</div>
`;

exports[`tree events should partially check parent if not all children checked 1`] = `
<div
  className="react-tree-view"
>
  <ul>
    <li
      className="indent-0"
      data-id="0"
    >
      <i
        className="fa fa-angle-right icon expand-button"
        onClick={[Function]}
      />
      <i
        className="fa fa-square-o icon checkbox-button"
        onClick={[Function]}
      />
      <i
        className="icon fa fa-ban"
        style={Object {}}
      />
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "Parent 0",
          }
        }
        onClick={[Function]}
      />
    </li>
    <li
      className="indent-0 selectable changed-checkbox"
      data-id="1"
    >
      <i
        className="fa fa-angle-down icon expand-button"
        onClick={[Function]}
      />
      <i
        className="fa fa-square icon checkbox-button"
        onClick={[Function]}
      />
      <i
        className="icon fa fa-ban"
        style={Object {}}
      />
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "Parent 1",
          }
        }
        onClick={[Function]}
      />
    </li>
    <li
      className="indent-1 selectable changed-checkbox"
      data-id="1.0"
    >
      <i
        className="fa fa-angle-down icon expand-button"
        onClick={[Function]}
      />
      <i
        className="fa fa-square icon checkbox-button"
        onClick={[Function]}
      />
      <i
        className="icon fa fa-ban"
        style={Object {}}
      />
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "Child 1.0",
          }
        }
        onClick={[Function]}
      />
    </li>
    <li
      className="indent-2 no-open-button selectable changed-checkbox selected"
      data-id="1.0.0"
    >
      <i
        className="fa fa-check-square icon checkbox-button"
        onClick={[Function]}
      />
      <i
        className="fa fa-check"
      />
      <i
        className="icon fa fa-ban"
        style={Object {}}
      />
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "Child 1.0.0",
          }
        }
        onClick={[Function]}
      />
    </li>
    <li
      className="indent-2 no-open-button selectable"
      data-id="1.0.1"
    >
      <i
        className="fa fa-square-o icon checkbox-button"
        onClick={[Function]}
      />
      <i
        className="icon fa fa-ban"
        style={Object {}}
      />
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "Child 1.0.1",
          }
        }
        onClick={[Function]}
      />
    </li>
    <li
      className="indent-2 no-open-button selectable"
      data-id="1.0.2"
    >
      <i
        className="fa fa-square-o icon checkbox-button"
        onClick={[Function]}
      />
      <i
        className="icon fa fa-ban"
        style={Object {}}
      />
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "Child 1.0.2",
          }
        }
        onClick={[Function]}
      />
    </li>
    <li
      className="indent-1 no-open-button selectable"
      data-id="1.1"
    >
      <i
        className="fa fa-square-o icon checkbox-button"
        onClick={[Function]}
      />
      <i
        className="icon fa fa-ban"
        style={Object {}}
      />
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "Child 1.1",
          }
        }
        onClick={[Function]}
      />
    </li>
    <li
      className="indent-0 selectable"
      data-id="2"
    >
      <i
        className="fa fa-angle-right icon expand-button"
        onClick={[Function]}
      />
      <i
        className="fa fa-square-o icon checkbox-button"
        onClick={[Function]}
      />
      <i
        className="icon fa fa-ban"
        style={Object {}}
      />
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "Parent 2",
          }
        }
        onClick={[Function]}
      />
    </li>
  </ul>
  <style>
    
                .react-tree-view .indent-0{padding-left:0em}
                .react-tree-view .indent-0.no-open-button{padding-left:calc(1em + 4px)}
                .react-tree-view .indent-1{padding-left:1em}
                .react-tree-view .indent-1.no-open-button{padding-left:calc(2em + 4px)}
                .react-tree-view .indent-2{padding-left:2em}
                .react-tree-view .indent-2.no-open-button{padding-left:calc(3em + 4px)}
                .react-tree-view .indent-3{padding-left:3em}
                .react-tree-view .indent-3.no-open-button{padding-left:calc(4em + 4px)}
  </style>
</div>
`;

exports[`tree events should partially check parent if not all children checked 2`] = `
<div
  className="react-tree-view"
>
  <ul>
    <li
      className="indent-0"
      data-id="0"
    >
      <i
        className="fa fa-angle-right icon expand-button"
        onClick={[Function]}
      />
      <i
        className="fa fa-square-o icon checkbox-button"
        onClick={[Function]}
      />
      <i
        className="icon fa fa-ban"
        style={Object {}}
      />
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "Parent 0",
          }
        }
        onClick={[Function]}
      />
    </li>
    <li
      className="indent-0 selectable changed-checkbox"
      data-id="1"
    >
      <i
        className="fa fa-angle-down icon expand-button"
        onClick={[Function]}
      />
      <i
        className="fa fa-square icon checkbox-button"
        onClick={[Function]}
      />
      <i
        className="icon fa fa-ban"
        style={Object {}}
      />
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "Parent 1",
          }
        }
        onClick={[Function]}
      />
    </li>
    <li
      className="indent-1 selectable changed-checkbox"
      data-id="1.0"
    >
      <i
        className="fa fa-angle-down icon expand-button"
        onClick={[Function]}
      />
      <i
        className="fa fa-square icon checkbox-button"
        onClick={[Function]}
      />
      <i
        className="icon fa fa-ban"
        style={Object {}}
      />
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "Child 1.0",
          }
        }
        onClick={[Function]}
      />
    </li>
    <li
      className="indent-2 no-open-button selectable changed-checkbox selected"
      data-id="1.0.0"
    >
      <i
        className="fa fa-check-square icon checkbox-button"
        onClick={[Function]}
      />
      <i
        className="fa fa-check"
      />
      <i
        className="icon fa fa-ban"
        style={Object {}}
      />
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "Child 1.0.0",
          }
        }
        onClick={[Function]}
      />
    </li>
    <li
      className="indent-2 no-open-button selectable"
      data-id="1.0.1"
    >
      <i
        className="fa fa-square-o icon checkbox-button"
        onClick={[Function]}
      />
      <i
        className="icon fa fa-ban"
        style={Object {}}
      />
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "Child 1.0.1",
          }
        }
        onClick={[Function]}
      />
    </li>
    <li
      className="indent-2 no-open-button selectable"
      data-id="1.0.2"
    >
      <i
        className="fa fa-square-o icon checkbox-button"
        onClick={[Function]}
      />
      <i
        className="icon fa fa-ban"
        style={Object {}}
      />
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "Child 1.0.2",
          }
        }
        onClick={[Function]}
      />
    </li>
    <li
      className="indent-1 no-open-button selectable changed-checkbox"
      data-id="1.1"
    >
      <i
        className="fa fa-check-square icon checkbox-button"
        onClick={[Function]}
      />
      <i
        className="icon fa fa-ban"
        style={Object {}}
      />
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "Child 1.1",
          }
        }
        onClick={[Function]}
      />
    </li>
    <li
      className="indent-0 selectable"
      data-id="2"
    >
      <i
        className="fa fa-angle-right icon expand-button"
        onClick={[Function]}
      />
      <i
        className="fa fa-square-o icon checkbox-button"
        onClick={[Function]}
      />
      <i
        className="icon fa fa-ban"
        style={Object {}}
      />
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "Parent 2",
          }
        }
        onClick={[Function]}
      />
    </li>
  </ul>
  <style>
    
                .react-tree-view .indent-0{padding-left:0em}
                .react-tree-view .indent-0.no-open-button{padding-left:calc(1em + 4px)}
                .react-tree-view .indent-1{padding-left:1em}
                .react-tree-view .indent-1.no-open-button{padding-left:calc(2em + 4px)}
                .react-tree-view .indent-2{padding-left:2em}
                .react-tree-view .indent-2.no-open-button{padding-left:calc(3em + 4px)}
                .react-tree-view .indent-3{padding-left:3em}
                .react-tree-view .indent-3.no-open-button{padding-left:calc(4em + 4px)}
  </style>
</div>
`;
